# struktcore-lite

./: .gitignore  LICENSE  README.md  manifest.in  pyproject.toml  requirements.txt
plugins/: example_plugin.py
struktcore_lite/: main.py
struktcore_lite/assets/: sc-l.yaml
struktcore_lite/core/: config.py  fuzzy_matcher.py  logger.py  memory.py  model_loader.py  plugin_loader.py  prompter.py  stdin_handler.py
tests/: test_config.py  test_plugins.py  test_prompter.py
